--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,15 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <string name="app_name">GeolocationTracker</string>
+    <string name="title_create_account">Create your Account</string>
+    <string name="title_login_account">Login to your Account</string>
+    <string name="hint_email">Email</string>
+    <string name="hint_password">Password</string>
+    <string name="remember_check">Remember me</string>
+    <string name="sign_in">Sign in</string>
+    <string name="sign_up">Sign up</string>
+    <string name="label_continue_with">or continue with</string>
+    <string name="label_have_account">Already have an account?</string>
+    <string name="label_not_have_account" tools:ignore="StringEscaping">Don't have an account?</string>
+    <string name="label_forgot_pass">Forgot the password?</string>
+    <string name="description">Description</string>
 </resources>
