--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
     <string name="sign_up">Sign up</string>
     <string name="label_continue_with">or continue with</string>
     <string name="label_have_account">Already have an account?</string>
-    <string name="label_not_have_account" tools:ignore="StringEscaping">Don't have an account?</string>
+    <string name="label_not_have_account" tools:ignore="StringEscaping">Dont have an account?</string>
     <string name="label_forgot_pass">Forgot the password?</string>
     <string name="description">Description</string>
 </resources>
